#5 - jwt 의존성추가 & tokenProvider 구현

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     // security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
+    // jwts
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
     // web
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // validation
