--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,6 +24,12 @@ spring:
     open-in-view: false
   h2.console.enabled: true
   sql.init.mode: always
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 30MB
+      enabled: true
+      location:
 
 jwt:
   secretKey: 098766543211hoon-log-secretKey-2023-10-0101234567890
@@ -47,3 +53,6 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
