#21 - 트렌딩 검색 메서드 삭제와 PageableDefault 값 상수처리
트렌딩 검색은 기존 검색 메서드에 Pageable 객체 속성 값을
`sort=likeCount,DESC&sort=createdAt,DESC` 으로 request param을 통해
프론트에서 보내주면 트렌딩검색과 동일하므로 기존 검색메서드와 합친다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/hoonlog
     username: fpg123
-    password: password
+    password: 12345678
   jpa:
     defer-datasource-initialization: true
     hibernate:
