--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
 }
@@ -66,6 +67,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    finalizedBy 'jacocoTestReport'
 }
 
 // Querydsl Q Class 생성 위치
@@ -84,4 +87,18 @@ sourceSets {
 // gradle clean 시, Q Class 디렉토리까지 삭제하도록 설정
 clean {
     delete file(querydslDir)
+}
+
+// build.gradle 에 추가
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    "**/Q*.class"
+            ])
+        }))
+    }
 }
