--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,9 +8,9 @@ logging:
     org.hibernate.orm.jdbc.bind: trace
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hoonlog
-    username: fpg123
-    password: 12345678
+    url: ${LOCAL_DB_URL}
+    username: ${LOCAL_DB_USERNAME}
+    password: ${LOCAL_DB_PASSWORD}
   jpa:
     defer-datasource-initialization: true
     hibernate:
@@ -32,8 +32,8 @@ spring:
       location:
 
 jwt:
-  secretKey: 098766543211hoon-log-secretKey-2023-10-0101234567890
-  refreshKey: 2098766543211hoon023_10-01-hoon-log-refreshKey01234567890
+  secretKey: ${JWT_SECRET_KEY}
+  refreshKey: ${JWT_REFRESH_KEY}
 
 ---
 spring:
@@ -56,3 +56,6 @@ spring:
   h2:
     console:
       enabled: true
+jwt:
+  secretKey: 098766543211hoon-log-secretKey-2023-10-0101234567890
+  refreshKey: 2098766543211hoon023_10-01-hoon-log-refreshKey01234567890
