--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -23,11 +23,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
+      - name: Gradle build
+        run: ./gradlew build
 
       - name: Upload test result on PR
         uses: EnricoMi/publish-unit-test-result-action@v1
