#29 - gradle build 명령 수정
gradle build를 안전하게 하기 위하여
clean을 한 후 build를 하기 위해서 명령을 수정한다.

--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Gradle build
-        run: ./gradlew build
+        run: ./gradlew clean build
 
       - name: Upload test result on PR
         uses: EnricoMi/publish-unit-test-result-action@v1
