--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,19 +12,23 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: 17
+          distribution: temurin
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Gradle build
-        run: sudo ./gradlew clean build
+#      - name: Grant execute permission for gradlew
+#        run: chmod +x gradlew
+#
+#      - name: Gradle build
+#        run: sudo ./gradlew clean build
+      - name: setup and execute gradle task
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
 
       - name: Upload test result on PR
         uses: EnricoMi/publish-unit-test-result-action@v1
