--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,9 @@ jobs:
           java-version: 17
           distribution: temurin
 
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+        
 #
 #      - name: Gradle build
 #        run: sudo ./gradlew clean build
