#29 - querydslDir 경로 변경
오류의 문제가 querydslDsl의 경로가
`/src/` 였는데 `./gradlew build` 시 루트 디렉터리로 인식되어
오류라 발생하는거 같아 경로를 수정한다

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,9 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-        
-#
-#      - name: Gradle build
-#        run: sudo ./gradlew clean build
-      - name: setup and execute gradle task
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
+
+      - name: Gradle build
+        run: ./gradlew clean build test
 
       - name: Upload test result on PR
         uses: EnricoMi/publish-unit-test-result-action@v1
