--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ tasks.named('test') {
 }
 
 // Querydsl Q Class 생성 위치
-def querydslDir = "${File.separator}src${File.separator}main${File.separator}generated${File.separator}"
+def querydslDir = "$buildDir/generated/querydsl"
 
 // Querydsl Q Class 생성 위치 지정
 tasks.withType(JavaCompile) {
