#39 - application.yaml 설정추가와 값설정
elasticsearch 관련 로깅을 보기 위한 설정과
테스트시 testContainer 설정을 용이하기 위한 bean-overriding 설정과
elasticsearch hostAndPort 값을 설정하였다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,7 @@ logging:
     me.honki12345.hoonlog: debug
     org.springframework.web.server: debug
     org.springframework.security: debug
+    org.springframework.data.elasticsearch.client.wire: trace
     org.hibernate.type.descriptor.sql.BasicBinder: trace
     org.hibernate.orm.jdbc.bind: trace
 spring:
@@ -30,6 +31,8 @@ spring:
       max-request-size: 30MB
       enabled: true
       location:
+  main:
+    allow-bean-definition-overriding: true
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
@@ -54,6 +57,8 @@ file:
     url: /images/post/
   image:
     location: ${user.home}${file.separator}hoonlog${file.separator}post
+elasticsearch:
+  hostAndPort: localhost:9200
 
 ---
 spring:
