#44 - Lorem generator 의존성 추가
대용량 더미 데이터의 내용을 위하여 Lorem generator 의존성을 추가한다.

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
     // dev-tools 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    // lorem generator
+    implementation 'com.thedeanda:lorem:2.2'
     // h2
     runtimeOnly 'com.h2database:h2'
     // mysql driver
