#46 - ES 에 필요한 값들을 환경변수로 주입

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -60,7 +60,10 @@ file:
   image:
     location: ${user.home}${file.separator}hoonlog${file.separator}post
 elasticsearch:
-  hostAndPort: localhost:9200
+  host: ${ES_HOST}
+  port: ${ES_PORT}
+  username: ${ES_USERNAME}
+  password: ${ES_PASSWORD}
 
 ---
 spring:
