#46 - 테스트 환경에서 환경변수 값 설정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -95,3 +95,8 @@ file:
     url: /images/post/
   image:
     location: ${user.home}${file.separator}test-hoonlog${file.separator}post
+elasticsearch:
+  host: localhost
+  port: 8080
+  username: username
+  password: password
